# routes/index.js
@@ -22,7 +22,7 @@ routes.get('/', (req, res) => {
 
 
 routes.use('/',require('./routes-swagger.js'));
-routes.use('/items', require('./items.js'))
+routes.use('/reminders', require('./reminders.js'))
 routes.use('/users', require('./user.js'))
 
 
